--- a/main-app/public/admin.html
+++ b/main-app/public/admin.html
@@ -119,7 +119,7 @@
             </nav>
 
             <!-- 主内容区 -->
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 main-content d-flex flex-column" style="overflow-y: auto; height: 100vh;">
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 main-content d-flex flex-column" style="height: 100vh; overflow-y: hidden;">
                 <!-- 仪表板 -->
                 <div id="dashboard" class="content-section active">
                     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
