--- a/main-app/public/user.html
+++ b/main-app/public/user.html
@@ -6,9 +6,29 @@
     <title>库存历史 - 仓库库存检测系统</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
+        html, body {
+            height: 100%;
+            overflow: hidden;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        .container-fluid {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        main {
+            flex-grow: 1;
+            overflow-y: auto;
+            min-height: 0;
+        }
+    </style>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -23,8 +43,8 @@
                 </div>
             </div>
         </nav>
-        <main class="pt-3">
-            <div id="inventory-history-container">
+        <main class="pt-3 container-fluid">
+            <div id="inventory-history-container" class="d-flex flex-column h-100">
                 <!-- 库存历史内容将由JS加载 -->
             </div>
         </main>
