--- a/main-app/public/admin.html
+++ b/main-app/public/admin.html
@@ -360,6 +360,21 @@
                 </div>
             </div>
         </div>
+
+        <!-- 图片查看模态框 -->
+        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="imageModalLabel">查看图片</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <img src="" id="modalImage" class="img-fluid" alt="放大后的图片">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -373,6 +388,6 @@
     <script src="/js/task-runner.js"></script>
     <script src="/js/tasks-and-configs.js"></script>
     <script src="/js/sku-manager.js"></script>
-    <script src="/js/pivot-table.js"></script>
+    <script src="/js/pivot-table.js?v=1.0.1"></script>
 </body>
 </html>
