增加订单库存检测

--- a/main-app/public/admin.html
+++ b/main-app/public/admin.html
@@ -77,6 +77,12 @@
                                 任务与配置
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-section="orders">
+                                <i class="fas fa-shopping-cart me-2"></i>
+                                订单服务
+                            </a>
+                        </li>
                         <li class="nav-item" style="display: none;">
                             <a class="nav-link" href="#" data-section="results">
                                 <i class="fas fa-chart-line me-2"></i>
@@ -340,6 +346,9 @@
 
                 <!-- 库存数据透视 -->
                 <div id="pivot-table" class="content-section"></div>
+
+                <!-- 订单管理 -->
+                <div id="orders" class="content-section"></div>
             </main>
         </div>
     </div>
@@ -371,6 +380,24 @@
                     </div>
                     <div class="modal-body text-center">
                         <img src="" id="modalImage" class="img-fluid" alt="放大后的图片">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 公共信息模态框 -->
+        <div class="modal fade" id="commonInfoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="commonInfoModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="commonInfoModalLabel">提示</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="commonInfoModalBody">
+                        <!-- 内容动态填充 -->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
                     </div>
                 </div>
             </div>
