修改访问路径

--- a/main-app/public/admin.html
+++ b/main-app/public/admin.html
@@ -406,15 +406,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-    <script src="/libs/chart.umd.min.js"></script>
-    <script src="/libs/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <script src="/js/utils.js"></script>
-    <script src="/js/admin-main.js"></script>
-    <script src="/js/config-manager.js"></script>
-    <script src="/js/schedule-manager.js"></script>
-    <script src="/js/task-runner.js"></script>
-    <script src="/js/tasks-and-configs.js"></script>
-    <script src="/js/sku-manager.js"></script>
-    <script src="/js/pivot-table.js?v=1.0.1"></script>
+    <script src="libs/chart.umd.min.js"></script>
+    <script src="libs/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/admin-main.js"></script>
+    <script src="js/config-manager.js"></script>
+    <script src="js/schedule-manager.js"></script>
+    <script src="js/task-runner.js"></script>
+    <script src="js/tasks-and-configs.js"></script>
+    <script src="js/sku-manager.js"></script>
+    <script src="js/pivot-table.js?v=1.0.1"></script>
 </body>
 </html>
