--- a/main-app/public/index.html
+++ b/main-app/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>跳转中...</title>
     <script>
-        window.location.href = '/login.html';
+        window.location.href = 'login.html';
     </script>
 </head>
 <body>
-    <p>正在跳转到 <a href="/login.html">登录页面</a>...</p>
+    <p>正在跳转到 <a href="login.html">登录页面</a>...</p>
 </body>
 </html>
