--- a/main-app/public/results.html
+++ b/main-app/public/results.html
@@ -65,7 +65,7 @@
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="./">
                 <i class="fas fa-warehouse me-2"></i>
                 仓库库存检测系统
             </a>
@@ -75,16 +75,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">首页</a>
+                        <a class="nav-link" href="./">首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/results">查看结果</a>
+                        <a class="nav-link active" href="results">查看结果</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin">管理后台</a>
+                        <a class="nav-link" href="admin">管理后台</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">登录</a>
+                        <a class="nav-link" href="login">登录</a>
                     </li>
                 </ul>
             </div>
@@ -101,6 +101,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/utils.js"></script>
     <script>
         let currentPage = 1;
         let currentType = 'all';
@@ -111,7 +112,7 @@
             const token = localStorage.getItem('token');
             if (!token) {
                 alert('请先登录');
-                window.location.href = '/login';
+                window.location.href = 'login';
                 return false;
             }
             return true;
@@ -136,25 +137,16 @@
             `;
 
             try {
-                let url = `/api/results?limit=${pageSize}&offset=${(page - 1) * pageSize}`;
+                let url = `api/results?limit=${pageSize}&offset=${(page - 1) * pageSize}`;
                 if (currentType === 'scheduled') {
                     url += '&scheduled=true';
                 } else if (currentType === 'manual') {
                     url += '&scheduled=false';
                 }
 
-                const response = await fetch(url, {
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
+                const results = await apiRequest(url);
+                displayResults(results);
 
-                if (response.ok) {
-                    const results = await response.json();
-                    displayResults(results);
-                } else {
-                    throw new Error('加载失败');
-                }
             } catch (error) {
                 container.innerHTML = `
                     <div class="alert alert-danger">
@@ -281,18 +273,8 @@
             if (!token) return;
 
             try {
-                const response = await fetch(`/api/results/${resultId}`, {
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-
-                if (response.ok) {
-                    const result = await response.json();
-                    showResultModal(result);
-                } else {
-                    alert('加载结果详情失败');
-                }
+                const result = await apiRequest(`api/results/${resultId}`);
+                showResultModal(result);
             } catch (error) {
                 alert('加载结果详情失败: ' + error.message);
             }
