--- a/main-app/public/user.html
+++ b/main-app/public/user.html
@@ -67,13 +67,13 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-    <script src="/libs/chart.umd.min.js"></script>
-    <script src="/libs/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="libs/chart.umd.min.js"></script>
+    <script src="libs/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script>
         // Define token in the global scope
         var token = null;
     </script>
-    <script src="/js/utils.js"></script>
+    <script src="js/utils.js"></script>
     <script>
         let currentUser = null;
         let sessionCheckInterval = null; // 用于会话检查的定时器
@@ -83,15 +83,14 @@
             stopSessionCheck(); // 先停止任何可能存在的旧定时器
             sessionCheckInterval = setInterval(async () => {
                 try {
-                    const response = await fetch('/api/auth/check-session', {
-                        headers: { 'Authorization': `Bearer ${token}` }
-                    });
-                    if (response.status === 401) {
+                    await apiRequest('api/auth/check-session');
+                } catch (error) {
+                    if (error.status === 401) {
                         console.log('会话已失效，将自动登出。');
                         logout();
+                    } else {
+                        console.error('会话检查失败:', error);
                     }
-                } catch (error) {
-                    console.error('会话检查失败:', error);
                 }
             }, 10000); // 每10秒检查一次
         }
@@ -109,7 +108,7 @@
             const userStr = localStorage.getItem('user');
 
             if (!token || !userStr) {
-                window.location.href = '/login.html';
+                window.location.href = 'login.html';
                 return;
             }
             currentUser = JSON.parse(userStr);
@@ -126,11 +125,11 @@
             }
 
             try {
-                const response = await fetch(`/partials/${section}.html`);
+                const response = await fetch(`partials/${section}.html`);
                 if (!response.ok) throw new Error('Failed to load content');
                 container.innerHTML = await response.text();
                 
-                const scriptPath = `/js/${section}.js`;
+                const scriptPath = `js/${section}.js`;
                 // 检查脚本是否已存在，防止重复加载
                 if (!document.querySelector(`script[src^="${scriptPath}"]`)) {
                     const script = document.createElement('script');
@@ -158,7 +157,7 @@
             stopSessionCheck(); // 停止会话检查
             localStorage.removeItem('token');
             localStorage.removeItem('user');
-            window.location.href = '/login.html';
+            window.location.href = 'login.html';
         }
     </script>
 </body>
